added random noise functionality for word dataset

--- a/EEG_Text/not so playground-word.ipynb
+++ b/EEG_Text/not so playground-word.ipynb
@@ -1042,7 +1042,170 @@
    "id": "dec05bc8-4d25-4cb6-bd39-ca1fdfd7e0a4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "from torch.utils.data import Dataset\n",
+    "from transformers import AutoTokenizer\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "\n",
+    "class EEGTextDatasetV3(Dataset):\n",
+    "    def __init__(self, data_dict, subject_keys, tokenizer_name='bert-base-uncased', maxlen=15*500, mode='within', noise = False):\n",
+    "        self.tokenizer = AutoTokenizer.from_pretrained(tokenizer_name)\n",
+    "        self.maxlen = maxlen\n",
+    "        self.data = []\n",
+    "        self.subject_to_id = {}\n",
+    "        self.mode = mode  # 'within', 'cross', or 'zero-shot'\n",
+    "        self.noise = noise\n",
+    "        \n",
+    "        self.load_data(data_dict, subject_keys)\n",
+    "\n",
+    "    def load_data(self, data_dict, subject_keys):\n",
+    "        for i, key in enumerate(subject_keys):\n",
+    "            patient_data = data_dict[key]\n",
+    "            sentences = np.array(patient_data['content'])\n",
+    "            eeg_data = patient_data['eeg']\n",
+    "            \n",
+    "            if key not in self.subject_to_id:\n",
+    "                self.subject_to_id[key] = len(self.subject_to_id)\n",
+    "            subject_id = self.subject_to_id[key]\n",
+    "            \n",
+    "            mean, std = self.incremental_mean_std(eeg_data)\n",
+    "\n",
+    "            for sentence, eeg in zip(sentences, eeg_data):\n",
+    "                if self.noise:\n",
+    "                    eeg = torch.rand(eeg.shape)\n",
+    "                eeg_processed, attention_mask = self.process_eeg(eeg, mean, std)\n",
+    "                if eeg_processed is not None:\n",
+    "                    self.data.append({\n",
+    "                        'sentence': sentence,\n",
+    "                        'eeg': eeg_processed,\n",
+    "                        'eeg_attention_mask': attention_mask,\n",
+    "                        'subject_id': subject_id\n",
+    "                    })\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        item = self.data[idx]\n",
+    "        \n",
+    "        tokenized = self.tokenizer(item['sentence'], return_tensors='pt', padding='max_length', truncation=True)\n",
+    "        \n",
+    "        return {\n",
+    "            'input_ids': tokenized['input_ids'][0],\n",
+    "            'attention_mask': tokenized['attention_mask'][0],\n",
+    "            'eeg': torch.nan_to_num(torch.tensor(item['eeg']), posinf=0, neginf=0).float(),\n",
+    "            'eeg_attention_mask': torch.tensor(item['eeg_attention_mask']),\n",
+    "            'subject_id': torch.tensor(item['subject_id'], dtype=torch.long)\n",
+    "        }\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def process_eeg(self, eeg_data, mean, std):\n",
+    "        \"\"\"\n",
+    "        Normalize EEG by computing total channel mean and std.\n",
+    "        Right pad EEG with 0s to self.maxlen, throw error if eeg_data is longer than maxlen.\n",
+    "        \"\"\"\n",
+    "        if eeg_data.shape[0] < 100:\n",
+    "            return None, None\n",
+    "    \n",
+    "        normalized_eeg = (eeg_data - mean) / std\n",
+    "        \n",
+    "        # Check if EEG data length exceeds maxlen\n",
+    "        if normalized_eeg.shape[0] > self.maxlen:\n",
+    "            print(f\"EEG data length {normalized_eeg.shape[0]} exceeds maxlen {self.maxlen}\")\n",
+    "            return None, None\n",
+    "        \n",
+    "        # Create attention mask\n",
+    "        attention_mask = np.zeros((self.maxlen,))\n",
+    "        attention_mask[:normalized_eeg.shape[0]] = 1\n",
+    "        \n",
+    "        # Right pad EEG data with zeros\n",
+    "        padded_eeg = np.zeros((self.maxlen, normalized_eeg.shape[1]))\n",
+    "        padded_eeg[:normalized_eeg.shape[0], :] = normalized_eeg\n",
+    "        \n",
+    "        return padded_eeg, attention_mask\n",
+    "    \n",
+    "    def incremental_mean_std(self, data_list):\n",
+    "        \"\"\"\n",
+    "        Calculate mean and standard deviation incrementally for a list of EEG data arrays.\n",
+    "        \"\"\"\n",
+    "        n_total = 0\n",
+    "        mean = 0\n",
+    "        M2 = 0\n",
+    "        for data in data_list:\n",
+    "            n = data.shape[0]\n",
+    "            if n < 100:\n",
+    "                continue\n",
+    "        n_total += n\n",
+    "        delta = data - mean\n",
+    "        mean += np.nansum(delta, axis=0) / n_total\n",
+    "        delta2 = data - mean\n",
+    "        M2 += np.nansum(delta * delta2, axis=0)\n",
+    "\n",
+    "        variance = M2 / (n_total - 1)\n",
+    "        std = np.sqrt(variance)\n",
+    "        return mean, std\n",
+    "\n",
+    "def create_data_splits(data_dict, train_ratio=0.8, val_ratio=0.1, test_ratio=0.1):\n",
+    "    all_sentences = set()\n",
+    "    for subject_data in data_dict.values():\n",
+    "        all_sentences.update(subject_data['content'])\n",
+    "    \n",
+    "    # Select test (zero-shot) sentences\n",
+    "    test_sentences = set(random.sample(all_sentences, int(len(all_sentences) * test_ratio)))\n",
+    "    \n",
+    "    train_val_data = {subject: {'content': [], 'eeg': []} for subject in data_dict}\n",
+    "    test_data = {subject: {'content': [], 'eeg': []} for subject in data_dict}\n",
+    "\n",
+    "    for subject, subject_data in data_dict.items():\n",
+    "        for sentence, eeg in zip(subject_data['content'], subject_data['eeg']):\n",
+    "            if sentence in test_sentences:\n",
+    "                test_data[subject]['content'].append(sentence)\n",
+    "                test_data[subject]['eeg'].append(eeg)\n",
+    "                # print(eeg)\n",
+    "            else:\n",
+    "                train_val_data[subject]['content'].append(sentence)\n",
+    "                train_val_data[subject]['eeg'].append(eeg)\n",
+    "    \n",
+    "    # Split remaining data into train and validation\n",
+    "    train_data = {subject: {'content': [], 'eeg': []} for subject in data_dict}\n",
+    "    val_data = {subject: {'content': [], 'eeg': []} for subject in data_dict}\n",
+    "\n",
+    "    for subject, subject_data in train_val_data.items():\n",
+    "        n = len(subject_data['content'])\n",
+    "        train_idx = int(n * (train_ratio / (train_ratio + val_ratio)))\n",
+    "        \n",
+    "        train_data[subject]['content'] = subject_data['content'][:train_idx]\n",
+    "        train_data[subject]['eeg'] = subject_data['eeg'][:train_idx]\n",
+    "        \n",
+    "        val_data[subject]['content'] = subject_data['content'][train_idx:]\n",
+    "        val_data[subject]['eeg'] = subject_data['eeg'][train_idx:]\n",
+    "\n",
+    "    return train_data, val_data, test_data\n",
+    "\n",
+    "def create_datasets(data_dict, tokenizer_name, maxlen, train_noise=False, val_noise=False, test_noise=False):\n",
+    "    train_data, val_data, test_data = create_data_splits(data_dict)\n",
+    "    \n",
+    "    # # Within-subject datasets\n",
+    "    # train_within = EEGTextDatasetV2(train_data, list(train_data.keys()), tokenizer_name, maxlen, mode='within')\n",
+    "    # val_within = EEGTextDatasetV2(val_data, list(val_data.keys()), tokenizer_name, maxlen, mode='within')\n",
+    "    \n",
+    "    # Cross-subject dataset\n",
+    "    train_data = {subject: {'content': train_data[subject]['content'],\n",
+    "                          'eeg': train_data[subject]['eeg']}\n",
+    "                for subject in train_data.keys()}\n",
+    "    val_data = {subject: {'content': val_data[subject]['content'],\n",
+    "                          'eeg':val_data[subject]['eeg']} for subject in val_data.keys()}\n",
+    "    \n",
+    "    train_cross = EEGTextDatasetV3(train_data, list(train_data.keys()), tokenizer_name, maxlen, mode='cross', noise = train_noise)\n",
+    "    val_cross = EEGTextDatasetV3(val_data, list(val_data.keys()), tokenizer_name, maxlen, mode='cross', noise = val_noise)\n",
+    "    \n",
+    "    # Test dataset (zero-shot)\n",
+    "    test = EEGTextDatasetV3(test_data, list(test_data.keys()), tokenizer_name, maxlen, mode='test', noise=test_noise)\n",
+    "    \n",
+    "    return train_cross, val_cross, test # train_within, val_within, \n",
+    "3"
+   ]
   },
   {
    "cell_type": "code",
