--- a/EEG_Text/not so playground-word.ipynb
+++ b/EEG_Text/not so playground-word.ipynb
@@ -1213,7 +1213,9 @@
    "id": "da8955b4-4505-482e-b3c7-2a52369b0e23",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"hello wrold\")"
+   ]
   },
   {
    "cell_type": "code",
